added background on New Mexico geology

--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -1,7 +1,9 @@
 \newacronym{aeo}{AEO}{Annual Energy Outlook}
 \newacronym{ann}{ANN}{Artificial Neural Network}
+\newacronym{br}{BR}{Basin and Range}
 \newacronym{bnn}{BNN}{Bayesian Neural Network}
 \newacronym{cnn}{CNN}{Convolutional Neural Network}
+\newacronym{cp}{CP}{Colorado Plateau}
 \newacronym{dem}{DEM}{Digital Elevation Model}
 \newacronym{doe}{DOE}{United States Department of Energy}
 \newacronym{egs}{EGS}{Enhanced Geothermal Systems}
@@ -17,11 +19,14 @@
 \newacronym{kwh}{kWh}{Kilowatt-Hour}
 \newacronym{lcoe}{LCOE}{Levelized Cost of Electricity}
 \newacronym{lanl}{LANL}{Los Alamos National Laboratory}
+\newacronym{ma}{Ma}{Million Years Ago}
+\newacronym{mdvf}{MDVF}{Mogollon-Datil Volcanic Field}
 \newacronym{mwh}{MWh}{Megawatt-Hour}
-\newacronym{nmfk}{NMFk}{Non-negative Matrix Factorization \& k-means Clustering}
+\newacronym{nmfk}{NMFk}{Non-negative Matrix Factorization \& $k$-means Clustering}
 \newacronym{nm}{NM}{New Mexico}
 \newacronym{nrel}{NREL}{National Renewable Energy Laboratory}
 \newacronym{opec}{OPEC}{Organization of the Petroleum Exporting Countries}
 \newacronym{pca}{PCA}{Principle Component Analysis}
 \newacronym{pfa}{PFA}{Play Fairway Analysis}
+\newacronym{rgr}{RGR}{Rio Grande Rift}
 \newacronym{usgs}{USGS}{United States Geological Survey}
