--- a/templates/chap2.tex
+++ b/templates/chap2.tex
@@ -196,19 +196,37 @@ This thesis considers a modeling approach where all three types of uncertainty a
 
 \subsection{Uncertainties}
 
-blah blah blah
-
 \section{Cost Modeling}\label{ch2:costmod}
-\subsection{MIT Energy Lab}
-\subsection{Cornell Lab}
-\subsection{GETEM/SAM}
-blah blah blah
 
-\section{Case Study}\label{ch2:case}
-\subsection{New Mexico Geothermal}
-\subsection{Southwest NM Study Area}
-\subsection{Lightning Dock Power Plant}
-blah blah blah
+\subsection{Review of Approaches}
+
+\section{Case Study: Southwest New Mexico}\label{ch2:case}
+
+The area of interest (AOI) for the geothermal exploration section of this thesis is a 37,600 square mile region of southwest New Mexico covered by nine counties: Cibola, Valencia, Catron, Socorro, Grant, Sierra, Luna, Dona Ana, and Hidalgo (\textbf{FIGURE}). This region defines the conjunction of four significant geologic provinces. The Southern Basin and Range province extends across the lower third of the AOI. To the east lies the Rio Grande Rift, marked today by the course of the Rio Grande river. The Colorado Plateau covers the north of the study area, and the central-west region is blanketed by the Datil-Mogollon Volcanic Field. The unique environments presented by each province may have implications on geothermal favorability \citep{pepin_new_2018}.
+
+\subsubsection{Basin and Range}
+
+Plate tectonic activity along the western edge of the United States transitioned ~30 \acrshort{ma} from subduction of the ancient Farallon plate to the present-day arrangement of transform motion along the San Andreas Fault and the Juan de Fuca subduction zone off of the Pacific Northwest \citep[~p. 81]{fowler_solid_2005}. This transition created a broad extensional regime within the southwestern section of the United States and into Mexico, believed to be responsible for the alternating narrow fault-bounded mountain and valley signature of the \acrlong{br} (\acrshort{br}) \citep{henry_real_1992}. The successive north-south striking normal faults level out in dip with depth, creating a asymmetric graben structures \citep[~p. 28-29]{frisch_continental_2011}. Cumulative extension reduced the crust thickness to 30-35 km on average, with associated enhanced volcanism, geothermal gradient, and average heat flow throughout the BR province \citep{lerch_crustal_2007}. (\textbf{FIGURE})
+
+\subsubsection{Rio Grande Rift}
+
+Even greater extension was experienced within the \acrlong{rgr} (\acrshort{rgr}) province, a \texttt{\char`\~}1000 km long zone separating the Great Plains to the east and Colorado Plateau to the west. Rifting occurred in at least two stages; initiation began \texttt{\char`\~}28 Ma as part of the BR extension, and then more localized thinning took place between \texttt{\char`\~}10-3 Ma \citep{seager_new_1984}. Basins chained along the rift show an alternating asymmetry, with transfer faults and accommodation zones separating successive basins. The faults that bound these basins and define the complex transfer zones could create favorable structural settings for geothermal systems \citep{faulds_favorable_2015}. Very high heat flow measurements suggest geothermal gradients that, upon extrapolation, would exceed the solidus at the crust-mantle boundary and thus support a thermal anomaly and asthenospheric convection beneath the rift center \citep{olsen_rio_1987}. Furthermore, both seismic and gravity data show crustal thinning to ~30 km, with greater thinning to the south \citep{keller_rio_1999}. Geologic and geophysical observations therefore support a high chance of both heat and permeability risk elements being met in the RGR province. 
+
+\subsubsection{Colorado Plateau}
+
+The \acrlong{cp} (\acrshort{cp}) province presents a very different geologic picture, one of stability and lack of significant deformation for around 600 MY \citep{leighty_neogene_1997}. Uplift of the Colorado Plateau took place over several different phases, beginning with the Laramide orogeny (80-40 Ma) responsible for the Rocky Mountains, and totaling more than 2 km relative to sea level based on exposed outcrops \citep{moucha_deep_2009}. Unlike the surrounding provinces, the CP acted as a cohesive block and still maintains a significantly greater crustal thickness (\texttt{\char`\~}40 km) compared to the BR or RGR \citep{thompson_regional_1979}. Recent models suggest CP uplift continues as complex replacement interactions between the denser brittle lithosphere and more buoyant underlying asthenosphere take place \citep{levander_continuing_2011}, yet lower heat flow values compared to the surrounding provinces \citep{thompson_regional_1979} suggest these crust-mantle dynamics have little effect on CP geothermal potential.
+
+\subsubsection{Mogollon-Datil Volcanic Field}
+
+On the western side of the AOI is the \acrlong{mdvf} (\acrshort{mdvf}), a 15,000 square mile outpouring of rhyolitic flows as part of a super-eruptive episode in western New Mexico that preceded rifting in the RGR province \citep{keller_rio_1999}. The timing indicates the thermal source for the MDVF magmas likely originated from a Farallon subduction-related event rather than onset of extension, and extrusive activity only represents a fraction of the total magma volume in the underlying composite pluton \citep{olsen_rio_1987,schneider_crustal_1994}. MDVF is just one of several Late Eocene-Oligocene volcanic fields in a chain from Colorado though to central Mexico, and isotopic dating shows a history of four pulses of surface activity beginning 36 Ma near Las Cruces, NM and ending conclusively 24 Ma after a general westward migration \citep{mcintosh_time-stratigraphic_1992}. Lack of consistent trends in current heat flow measurements across the field match the heterogeneous distribution of volcanic features and extrusive volumes \citep{mcintosh_time-stratigraphic_1992}, although some evidence suggests greater water availability and geothermometry measurements make MDVF worth considering for geothermal exploration \citep{pepin_new_2018}.
+
+\subsection{Lightning Dock}
+
+\subsubsection{Animas Valley}
+
+\subsubsection{Power Plant}
+
+
 
 %% EXAMPLES %%
 
