--- a/templates/cover.tex
+++ b/templates/cover.tex
@@ -78,7 +78,7 @@
 
 % If there is more than one supervisor, use the \supervisor command
 % once for each.
-\supervisor{Aimé Fournier}{Research Scientist, Earth and Planetary Sciences}
+\supervisor{Aim\'e Fournier}{Research Scientist, Earth and Planetary Sciences}
 \supervisor{Bryan R. Moser}{Academic Director, System Design and Management}
 
 % This is the department committee chairman, not the thesis committee
