--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,231 @@
 
+@article{reiter_heat-flow_2009,
+	title = {Heat-flow anomalies crossing {New} {Mexico} along {La} {Ristra} seismic profile},
+	volume = {1},
+	issn = {1941-8264},
+	url = {https://doi.org/10.1130/L1.1},
+	doi = {10.1130/L1.1},
+	abstract = {Heat-flow data along La Ristra seismic line crossing New Mexico from the Colorado Plateau to the Great Plains suggest that the Jemez Lineament and the Rio Grande rift are high heat-flow geologic provinces, which, from the heat-flow data, appear separated by a triangular wedge of Colorado Plateau. Estimated mid-depths of upper-mantle thermal sources for the Jemez Lineament and the Rio Grande rift generally agree with the mid-depths of the greatest upper-mantle seismic velocity anomalies, supporting the suggestion that these seismic anomalies are caused in part by increased temperature. Mid-depths of shallower thermal sources are near the mid-depth between the top of the crustal seismic velocity anomaly and the top of the upper-mantle seismic anomaly. Heat flow returns to intermediate values in the Colorado Plateau and the eastern rift flank of the Rio Grande rift, suggesting similar crustal and upper-mantle thermal conditions in the two regions and low values in the Great Plains, indicating cooler crustal and upper-mantle temperatures. Heat-flow values are generally consistent with seismic velocities, although differences between the data sets are observed for the Rio Grande rift eastern flank.},
+	number = {2},
+	urldate = {2021-06-12},
+	journal = {Lithosphere},
+	author = {Reiter, Marshall},
+	month = apr,
+	year = {2009},
+	pages = {88--94},
+}
+
+@article{schneider_crustal_1994,
+	title = {Crustal structure of the western margin of the {Rio} {Grande} rift and {Mogollon}-{Datil} volcanic field, southwestern {New} {Mexico} and southeastern {Arizona}},
+	issn = {0072-1077},
+	journal = {SPECIAL PAPERS-GEOLOGICAL SOCIETY OF AMERICA},
+	author = {Schneider, Robert V and Keller, G Randy and Cather, SM},
+	year = {1994},
+	note = {Publisher: GEOLOGICAL SOCIETY OF AMERICA, INC},
+	pages = {207--207},
+}
+
+@article{mcintosh_time-stratigraphic_1992,
+	title = {Time-stratigraphic framework for the {Eocene}-{Oligocene} {Mogollon}-{Datil} volcanic field, southwest {New} {Mexico}},
+	volume = {104},
+	issn = {1943-2674},
+	number = {7},
+	journal = {Geological Society of America Bulletin},
+	author = {McIntosh, William C and Chapin, Charles E and Ratté, James C and Sutter, John F},
+	year = {1992},
+	note = {Publisher: Geological Society of America},
+	pages = {851--871},
+}
+
+@article{levander_continuing_2011,
+	title = {Continuing {Colorado} plateau uplift by delamination-style convective lithospheric downwelling},
+	volume = {472},
+	issn = {1476-4687},
+	number = {7344},
+	journal = {Nature},
+	author = {Levander, A and Schmandt, B and Miller, MS and Liu, K and Karlstrom, KE and Crow, RS and Lee, C-TA and Humphreys, ED},
+	year = {2011},
+	note = {Publisher: Nature Publishing Group},
+	pages = {461--465},
+}
+
+@article{moucha_deep_2009,
+	title = {Deep mantle forces and the uplift of the {Colorado} {Plateau}},
+	volume = {36},
+	issn = {1944-8007},
+	number = {19},
+	journal = {Geophysical Research Letters},
+	author = {Moucha, Robert and Forte, Alessandro M and Rowley, David B and Mitrovica, Jerry X and Simmons, Nathan A and Grand, Stephen P},
+	year = {2009},
+	note = {Publisher: Wiley Online Library},
+}
+
+@article{thompson_regional_1979,
+	title = {Regional geophysics of the {Colorado} {Plateau}},
+	volume = {61},
+	issn = {0040-1951},
+	number = {1-3},
+	journal = {Tectonophysics},
+	author = {Thompson, George A and Zoback, Mary Lou},
+	year = {1979},
+	note = {Publisher: Elsevier},
+	pages = {149--181},
+}
+
+@book{leighty_neogene_1997,
+	title = {Neogene tectonism and magmatism across the {Basin} and {Range}-{Colorado} {Plateau} boundary, central {Arizona}},
+	isbn = {0-591-35086-6},
+	publisher = {Arizona State University},
+	author = {Leighty, Robert Scott},
+	year = {1997},
+}
+
+@inproceedings{faulds_favorable_2015,
+	title = {Favorable tectonic and structural settings of geothermal systems in the {Great} {Basin} region, western {USA}: {Proxies} for discovering blind geothermal systems},
+	publisher = {Nevada Bureau of Mines and Geology, University of Nevada, Reno},
+	author = {Faulds, James and Hinz, Nicholas},
+	year = {2015},
+	note = {Issue: DOE-UNR-06731-02},
+}
+
+@incollection{frisch_continental_2011,
+	address = {Berlin, Heidelberg},
+	title = {Continental graben structures},
+	isbn = {978-3-540-76504-2},
+	url = {https://doi.org/10.1007/978-3-540-76504-2_3},
+	abstract = {A continental graben structure or rift is a narrow, elongated, fault-bounded structure in the Earth’s crust (Fig. 3.1). Grabens consist of a central axial depression flanked by steep walls and elevated shoulders that plunge steeply into the rift axis and slope gradually towards the exterior (Fig. 3.2). The most famous example is the East African rift system. Rift systems may be cut and apparently offset by transform faults; examples include the Upper Rhine Graben in Central Europe and its southern continuation in the Bresse and Rhône grabens (see below). Graben structures occur in regions where the crust and lithospheric mantle are extended and thinned (Fig. 3.3). Broad regions of extension are typically expressed by numerous grabens and intervening higher horst blocks such as the Basin and Range Province in western North America. Graben systems also occur in oceanic crust along mid-ocean ridge systems and will be discussed in Chapter 5.},
+	language = {en},
+	urldate = {2021-06-11},
+	booktitle = {Plate {Tectonics}: {Continental} {Drift} and {Mountain} {Building}},
+	publisher = {Springer},
+	author = {Frisch, Wolfgang and Meschede, Martin and Blakey, Ronald},
+	editor = {Frisch, Wolfgang and Meschede, Martin and Blakey, Ronald C.},
+	year = {2011},
+	doi = {10.1007/978-3-540-76504-2_3},
+	keywords = {Continental Crust, Detachment Fault, Foot Wall, Lithospheric Mantle, Oceanic Crust},
+	pages = {27--41},
+}
+
+@article{lerch_crustal_2007,
+	title = {Crustal structure of the northwestern {Basin} and {Range} {Province} and its transition to unextended volcanic plateaus},
+	volume = {8},
+	copyright = {Copyright 2007 by the American Geophysical Union.},
+	issn = {1525-2027},
+	url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2006GC001429},
+	doi = {10.1029/2006GC001429},
+	abstract = {The northwestern margin of the Basin and Range Province is characterized by a transition from low-magnitude (∼20\%) extension in northwestern Nevada to relatively unextended volcanic plateaus in northeastern California. Seismic-velocity and potential-field modeling provides new control on the Mesozoic-to-present tectonic evolution of this poorly understood portion of the U.S. Cordillera. We document ∼20\% crustal thinning associated with Basin and Range extension from a crustal thickness of ∼37 km under northeastern California to ∼31 km under northwestern Nevada that is consistent with the amount of extension recorded in the upper crust in northwestern Nevada, suggesting the crustal response to extension was relatively homogeneous over the entire crustal column. Our modeling also shows a well-defined, 80-km-wide zone of unusually low upper-crustal velocities (∼5.9–6.1 km/s) that coincide with the surface location of sparse Cretaceous granites, locating the elusive northern extension of the Sierra Nevada batholith through northwestern Nevada for the first time in the subsurface. Combining geological and geophysical data, we reconstruct the late Cretaceous-to-present crustal evolution of this region, documenting an interplay between magmatic addition to the crust, erosional exhumation, sedimentation, and extension that has reversed the direction of crustal thinning from a west-facing continental margin to an east-facing interior basin margin over this time interval. Finally, we find no evidence in northwestern Nevada for unusually thick crust ({\textgreater}40 km) prior to Basin and Range extension.},
+	language = {en},
+	number = {2},
+	urldate = {2021-06-11},
+	journal = {Geochemistry, Geophysics, Geosystems},
+	author = {Lerch, D. W. and Klemperer, S. L. and Glen, J. M. G. and Ponce, D. A. and Miller, E. L. and Colgan, J. P.},
+	year = {2007},
+	note = {\_eprint: https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1029/2006GC001429},
+	keywords = {Basin and Range, crustal seismology, gravity, tectonics, transition zone},
+}
+
+@article{henry_real_1992,
+	title = {The real southern {Basin} and {Range}: {Mid}-to late {Cenozoic} extension in {Mexico}},
+	volume = {20},
+	issn = {1943-2682},
+	number = {8},
+	journal = {Geology},
+	author = {Henry, Christopher D and Aranda-Gomez, J Jorge},
+	year = {1992},
+	note = {Publisher: Geological Society of America},
+	pages = {701--704},
+}
+
+@misc{iris_basin_nodate,
+	title = {Basin \& {Range}: {Structural} {Evolution}- {Incorporated} {Research} {Institutions} for {Seismology}},
+	shorttitle = {Basin \& {Range}},
+	url = {https://www.iris.edu/hq/inclass/animation/basin__range_structural_evolution},
+	abstract = {IRIS is a consortium of universities dedicated to the operation of science facilities for the acquisition, management, and distribution of seismological data.},
+	urldate = {2021-06-11},
+	author = {{IRIS}},
+}
+
+@incollection{scharer_chapter_2019,
+	title = {Chapter 10 - {The} {San} {Andreas} {Fault} {System}: {Complexities} {Along} a {Major} {Transform} {Fault} {System} and {Relation} to {Earthquake} {Hazards}},
+	isbn = {978-0-12-812064-4},
+	shorttitle = {Chapter 10 - {The} {San} {Andreas} {Fault} {System}},
+	url = {https://www.sciencedirect.com/science/article/pii/B9780128120644000104},
+	abstract = {The San Andreas fault system is a 1300-km-long transform boundary that accommodates motion between the North American and Pacific Plates. New technologies and data reveal rich details about the present configuration of faults, distribution of strain, and associated seismic hazard on this complex network of faults. This contribution provides a brief summary of the geologic history of the San Andreas fault system, followed by an introduction to recent research that has changed understanding of the hazards along the main faults. Organized by region, we highlight a selection of recent research using new geodetic techniques, improved topographic data, advanced geochronologic methods, and high-resolution geophysics. The contribution ends with a review of the historic earthquakes on the San Andreas and San Jacinto faults, comparing these to past ruptures interpreted from paleoseismic studies.},
+	language = {en},
+	urldate = {2021-06-11},
+	booktitle = {Transform {Plate} {Boundaries} and {Fracture} {Zones}},
+	publisher = {Elsevier},
+	author = {Scharer, Katherine and Streig, Ashley},
+	editor = {Duarte, João C.},
+	month = jan,
+	year = {2019},
+	doi = {10.1016/B978-0-12-812064-4.00010-4},
+	keywords = {California, Geodesy, InSAR, Paleoseismology, Tectonic geomorphology},
+	pages = {249--269},
+}
+
+@article{keller_rio_1999,
+	title = {The {Rio} {Grande} rift : {A} geological and geophysical overview},
+	volume = {34},
+	issn = {1555-7332},
+	shorttitle = {The {Rio} {Grande} rift},
+	url = {https://doi.org/10.2113/34.1.121},
+	doi = {10.2113/34.1.121},
+	abstract = {The Rio Grande rift is a major structural element of the Southern Rocky Mountain region. During the last 20 years this feature has become widely recognized as a major Cenozoic continental rift zone. During this time we have learned much about the structure and evolution of the rift. However, many gaps in our knowledge remain that prevent us from fully understanding its evolution and the processes that formed it. The rift should not be studied in isolation, because the Laramide orogeny, uplift, complex magmatism, and extension that have occurred since the Late Cretaceous are all to some extent related.},
+	number = {1},
+	urldate = {2021-06-11},
+	journal = {Rocky Mountain Geology},
+	author = {Keller, G. Randy and Baldridge, W. Scott},
+	month = jan,
+	year = {1999},
+	pages = {121--130},
+}
+
+@article{olsen_rio_1987,
+	series = {Continental {Rifts}-{Principal} and {Regional} {Characteristics}},
+	title = {Rio {Grande} rift: {An} overview},
+	volume = {143},
+	issn = {0040-1951},
+	shorttitle = {Rio {Grande} rift},
+	url = {https://www.sciencedirect.com/science/article/pii/0040195187900837},
+	doi = {10.1016/0040-1951(87)90083-7},
+	abstract = {The Rio Grande rift of the southwestern United States is one of the world's principal continental rift systems. It extends as a series of asymmetrical grabens from central Colorado, through New Mexico, to Presidio, Texas, and Chihuahua, Mexico—a distance of more than 1000 km. Although the Rio Grande rift is closely related in timing and structural style to the contiguous Basin and Range extensional province, the two can be distinguished by a variety of geological and geophysical signatures. Rifts (both oceanic and continental) can be defined as elongate depressions overlying places where the entire lithosphere has ruptured in extension. The lithosphere of the Rio Grande rift conforms to this definition, in that: 1.(1) the crust is moderately thinned—Moho depths range from about 45 km under the flanks to about 33 km beneath the rift axis.2.(2) anomalously low Pn velocities (7.6–7.8 km s−1) beneath the rift and a long wavelength gravity low suggest that the asthenosphere is in contact with the base of the crust. The P-velocity is abnormally low (6.4–6.5 km s−1) in the lower half of the crust beneath the rift, suggesting high crustal temperatures. However, associated seismic and volcanologic data indicate the sub-rift lower crust is not dominated by a massive composite mafic intrusion such as is sometimes inferred for the East African rifts. Seismic and magnetotelluric data suggest the presence of a thin ({\textless} 1 km) sill-like contemporary midcrustal magma body which may perhaps extend intermittently along much of the length of the rift. Seismic and structural studies indicate a dominant horizontal fabric in the upper and middle crust. The brittle-ductile transition is at depths −15 km except for the major volcanic fields, where it rises to 2–3 km. Structural development of the rift occurred mainly during two time intervals: the early phase beginning at −30 Ma. and lasting 10–12 m.y., and the late phase extending from −10 to 3 Ma. The early phase involved extensive low-angle normal faulting throughout the rift region which was subsequently offset by high-angle normal faulting during the later deformational event. Volcanism of the Rio Grande rift is minor compared to some other continental rifts. Most of the volcanism is basaltic and occurred less than about 5 m.y. ago. Compositions range from alkalic to tholeiitic, with no unique spatial or temporal pattern. Magmas were probably derived from a variety of depths, indicating an unintegrated heat source with only local melting. Basaltic andesites and related calc-alkaline rocks erupted in the southern rift between about 30 and 18 m.y. ago were not uniquely related to the rifting process. Rather, the thermal pulse which generated these magmas was part of the previous, subduction-related event. Our interpretation of existing data concerning the evolution of the Rio Grande rift does not fit either simple active or passive “end-member” models. In particular, there is no compelling evidence for a major thermal event in the mantle uniquely associated with rifting. Yet heat—inherited from the immediately-preceding deformational regime—was certainly a critical factor in, and was probably a necessary condition for, rifting.},
+	language = {en},
+	number = {1},
+	urldate = {2021-06-11},
+	journal = {Tectonophysics},
+	author = {Olsen, Kenneth H. and Scott Baldridge, W. and Callender, Jonathan F.},
+	month = nov,
+	year = {1987},
+	pages = {119--139},
+}
+
+@inproceedings{bikerman_are_1994,
+	address = {New Mexico},
+	title = {Are the western {Mogollon}-{Datil} mid-{Cenozoic} ash flows cogenetic? {Pearce} element ratios and isotopic aspects of the question},
+	booktitle = {e 1994 {NMGS} {Fall} {Field} {Conference} {Guidebook}},
+	author = {BIKERMAN, MICHAEL},
+	year = {1994},
+	pages = {187--192},
+}
+
+@article{seager_new_1984,
+	title = {New {K}-{Ar} dates from basalts and the evolution of the southern {Rio} {Grande} rift},
+	volume = {95},
+	issn = {0016-7606},
+	url = {https://pubs.geoscienceworld.org/gsa/gsabulletin/article-abstract/95/1/87/202952/New-K-Ar-dates-from-basalts-and-the-evolution-of},
+	doi = {10.1130/0016-7606(1984)95<87:NKDFBA>2.0.CO;2},
+	language = {en},
+	number = {1},
+	urldate = {2021-06-11},
+	journal = {GSA Bulletin},
+	author = {Seager, W. R. and Shafiqullah, M. and Hawley, J. W. and Marvin, R. F.},
+	month = jan,
+	year = {1984},
+	note = {Publisher: GeoScienceWorld},
+	pages = {87--99},
+}
+
 @article{petty_updated_2007,
 	title = {Updated {U}.{S}. {Geothermal} {Supply} {Characterization}},
 	abstract = {This paper documents the approach taken to characterize and represent an updated assessment of U.S. geothermal supply for use in forecasting the penetration of geothermal electrical generation in the National Energy Modeling System (NEMS). This work is motivated by several factors: The supply characterization used as the basis of several recent Department of Energy (DOE) forecasts of geothermal capacity is outdated; additional geothermal resource assessments have been published; and a new costing tool that incorporates current technology, engineering practices, and associated costs has been released.},
